--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head prefix="og:http://ogp.me/ns#">
+        <meta property="og:title" content="Шаблон резюме" />
+        <meta property="og:description" content="Резюме для веба" />
+        <meat property="og:image" content="https://yandex.ru/images/search?p=1&text=%D1%80%D0%B5%D0%B7%D1%8E%D0%BC%D0%B5&img_url=https%3A%2F%2Fblog.stanis.ru%2Fimg%2F114025.jpg&pos=40&rpt=simage" />
         <link rel="stylesheet" href="style.css">
         <meta charset="utf-8">
 <title>Мое резюме</title>
@@ -8,21 +11,20 @@
 <body>
     <div id="header">
     <h1>Исхаков Булат</h1>
-    <h3>Веб-разработчик</h3>
+    <h3>Человек</h3>
 <p>
     <a href="mailto:bulat.iskhakov@gmail.com">bulat.iskhakov@gmail.com</a>
-    <a href="https://ru.hexlet.io">Хекслет</a>
-    </p>
+     </p>
     </div>
     <div id="main">
-    Я увлекаюсь веб дизайном
+    Я живу
     <br>
 
 </p>
 <h2>Опыт работы</h2>
     <ul>
-        <li>Персонализатор</li>
-        <li>Курьер</li>
+        <li>нет 1</li>
+        <li>нет 2</li>
     </ul>
 
 <h2>
@@ -34,13 +36,13 @@
 </ul>
     <h2>Другие навыки</h2>
     <ul>
-        <li>Игра на гитаре</li>
-        <li>Игра на скасофоне</li>
+        <li>навык 1</li>
+        <li>навык 2</li>
     </ul>
         </div>
         <div id="footer">
             Исхаков Булат
-            ул. Луговая, 10, Москва, Россия,
+            ул. Улица, 0, Город, Страна,
             <a href="mailto:bulat.iskhakov@gmail.com">bulat.iskhakov@gmail.com</a>
         </div>
 </body>
