--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head prefix="og:http://ogp.me/ns#">
         <meta property="og:title" content="Шаблон резюме" />
         <meta property="og:description" content="Резюме для веба" />
-        <meat property="og:image" content="https://yandex.ru/images/search?p=1&text=%D1%80%D0%B5%D0%B7%D1%8E%D0%BC%D0%B5&img_url=https%3A%2F%2Fblog.stanis.ru%2Fimg%2F114025.jpg&pos=40&rpt=simage" />
+        <meat property="og:image" content="https://bulatiskhakov.github.io/image.jpg" />
         <link rel="stylesheet" href="style.css">
         <meta charset="utf-8">
 <title>Мое резюме</title>
