--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head prefix="og:http://ogp.me/ns#">
         <meta property="og:title" content="Шаблон резюме" />
         <meta property="og:description" content="Резюме для веба" />
-        <meat property="og:image" content="https://bulatiskhakov.github.io/image.jpg" />
+        <meta property="og:image" content="https://bulatiskhakov.github.io/image.jpg" />
         <link rel="stylesheet" href="style.css">
         <meta charset="utf-8">
 <title>Мое резюме</title>
